# Ayurveda-Knowledge-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  env.txt  nginx.conf  requirements.txt  template.py  test.py
.github/workflows/: ci-cd.yml
backend/: pyproject.toml
backend/src/chatbot/: config.py  services.py
backend/tests/: test_chatbot.py  test_services.py
config/: config.json
faiss_index/: index.faiss  index.pkl
frontend/: package-lock.json  package.json
frontend-react/: package-lock.json  package.json  tsconfig.json
frontend-react/src/: App.tsx  index.css
frontend/src/: App.tsx
notebooks/: chatbot_interaction.ipynb
src/: config.json  streamlit.py
src/chatbot/: config.py  prompts.py  services.py
tests/: test_chatbot.py
