[tool.poetry]
name = "Indian-Tax-Advisor"  # Replace with your project's name
version = "0.1.0"            # Specify your project's version
description = "A FastAPI application with a React frontend"  # Short description of your project
authors = ["Mohit Kumar <mohitpanghal12345@gmail.com>"] 
license = "MIT"  # Specify the license type

[tool.poetry.dependencies]
# FastAPI and its dependencies
fastapi = "^0.115.0"
uvicorn = "^0.31.0"

# Other dependencies
aiohttp = "^3.10.9"
boto3 = "^1.35.34"
sqlalchemy = "^2.0.35"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"  # Testing framework

# Additional dependencies based on your requirements
aiohappyeyeballs = "2.4.3"
aiosignal = "1.3.1"
attrs = "24.2.0"
botocore = "1.35.34"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dataclasses-json = "0.6.7"
faiss-cpu = "1.8.0.post1"
frozenlist = "1.4.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain = "0.3.2"
langchain-aws = "0.2.2"
langchain-community = "0.3.1"
langchain-core = "0.3.9"
langchain-text-splitters = "0.3.0"
langsmith = "0.1.131"
marshmallow = "3.22.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
orjson = "3.10.7"
packaging = "24.1"
pluggy = "1.5.0"
pyasn1 = "0.6.1"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
pypdf = "5.0.1"
six = "1.16.0"
sniffio = "1.3.1"
tenacity = "8.5.0"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
urllib3 = "2.2.3"
yarl = "1.13.1"

[tool.poetry.dev-dependencies]
# Development dependencies for testing
pytest = "^8.3.3"
# Add additional dev dependencies as needed...

[build-system]
requires = ["poetry-core>=1.0.0"]  # Specify the minimum version of poetry-core
build-backend = "poetry.core.masonry.api"  # Build backend to use
